# handler/CreateOpening.go
@@ -2,8 +2,6 @@
 
 import (
 	"fmt"
-	"github.com/1guilherme1python1/go-api-vagas/handler/requests"
-	"github.com/1guilherme1python1/go-api-vagas/handler/responses"
 	"github.com/1guilherme1python1/go-api-vagas/schemas"
 	"github.com/gin-gonic/gin"
 	"net/http"
@@ -20,9 +18,9 @@ import (
 // @Success 200 {object} CreateOpeningResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /opening [post]
+// @Router /api/v1/opening [post]
 func CreateOpeningHandler(ctx *gin.Context) {
-	var request = requests.CreateOpeningRequest{}
+	var request = CreateOpeningRequest{}
 
 	err := ctx.BindJSON(&request)
 	if err != nil {
@@ -34,13 +32,13 @@ func CreateOpeningHandler(ctx *gin.Context) {
 	err = request.Validate()
 	if err != nil {
 		logger.Errof("erro ao validate: %v\n", err.Error())
-		responses.SendErrorResponse(ctx, http.StatusBadRequest, err.Error())
+		SendErrorResponse(ctx, http.StatusBadRequest, err.Error())
 		return
 	}
 
 	userEmail, exists := ctx.Get("email")
 	if !exists {
-		responses.SendErrorResponse(ctx, http.StatusUnauthorized, "User email not found")
+		SendErrorResponse(ctx, http.StatusUnauthorized, "User email not found")
 		return
 	}
 
@@ -57,12 +55,12 @@ func CreateOpeningHandler(ctx *gin.Context) {
 	// Cria no banco primeiro
 	if err := db.Create(&opening).Error; err != nil {
 		logger.Errof("error creating opening: %v\n", err.Error())
-		responses.SendErrorResponse(ctx, http.StatusInternalServerError, err.Error())
+		SendErrorResponse(ctx, http.StatusInternalServerError, err.Error())
 		return
 	}
 
 	// Só agora o ID e os timestamps foram preenchidos!
-	response := responses.OpeningResponse{
+	response := OpeningResponse{
 		ID:        opening.ID,
 		CreatedAt: opening.CreatedAt,
 		UpdatedAt: opening.UpdatedAt,
@@ -75,5 +73,5 @@ func CreateOpeningHandler(ctx *gin.Context) {
 	}
 
 	logger.Infof("request: %+v\n", request)
-	responses.SendSuccessResponse(ctx, http.StatusOK, response)
+	SendSuccessResponse(ctx, http.StatusOK, response)
 }
